# glorytun-android

./: .gitignore  PROJECT_INDEX.md  README.md  build.gradle  local.properties  settings.gradle  status.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  glorytun_jni.c
app/src/main/cpp/glorytun/mud/: mud.c  mud.h
app/src/main/cpp/glorytun/mud/aegis256/: aegis256.c
app/src/main/cpp/glorytun/src/: bind.c  common.c  common.h  ctl.c  main.c  tun.c
app/src/main/java/com/example/glorytun/: AdGuardProxyService.kt  AppUpdateManager.kt  BandwidthController.kt  BandwidthFragment.kt  (+36 more)
app/src/main/res/drawable/: bg_card.xml  bg_card_selected.xml  bg_chip_selected.xml  bg_chip_unselected.xml  bg_connect_button_disconnected.xml  bg_save_button.xml  bg_status_connected.xml  ic_chevron_right.xml  ic_nav_bonding.xml  ic_nav_dashboard.xml  ic_nav_pair_share.xml  ic_nav_settings.xml  ic_nav_stats.xml
app/src/main/res/drawable-night/: bg_connect_button.xml
app/src/main/res/layout/: activity_main.xml  dialog_profile.xml  fragment_bandwidth.xml  fragment_bonding.xml  fragment_dashboard.xml  fragment_network_protocol.xml  fragment_pair_share.xml  fragment_settings.xml  fragment_speed_test.xml  fragment_stats.xml  item_speed_test_result.xml  item_vpn_profile.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
server/pairbond-relay/: README.md  install.sh  pairbond-relay.service  pairbond_relay.py  test_pairbond_relay.py
(+21 files in other folders)
